--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
-    "expo": "^52.0.11",
+    "expo": "^52.0.18",
+    "expo-blur": "~14.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.23",
     "react": "^18.3.1",
-    "react-native": "^0.76.3",
+    "react-native": "^0.76.5",
     "react-native-heroicons": "^4.0.0",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "tailwindcss": "^3.4.15",
-    "expo-blur": "~14.0.1"
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
