--- a/package.json
+++ b/package.json
@@ -10,24 +10,30 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native/babel-preset": "^0.76.5",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
-    "expo": "^52.0.18",
+    "@types/react-native-onboarding-swiper": "^1.1.9",
+    "expo": "^52.0.21",
     "expo-blur": "~14.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
+    "lottie-react-native": "^7.1.0",
     "nativewind": "^4.1.23",
     "react": "^18.3.1",
     "react-native": "^0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-heroicons": "^4.0.0",
     "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@types/react": "~18.3.12",
     "typescript": "^5.1.3"
   },
