--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native/babel-preset": "^0.76.5",
     "@react-navigation/drawer": "^7.1.1",
-    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.1.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@tanstack/react-query": "^5.66.0",
     "@types/react-native-onboarding-swiper": "^1.1.9",
+    "axios": "^1.7.9",
     "expo": "^52.0.21",
     "expo-blur": "~14.0.1",
     "expo-linear-gradient": "~14.0.1",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "lottie-react-native": "^7.1.0",
     "nativewind": "^4.1.23",
