--- a/package.json
+++ b/package.json
@@ -18,22 +18,24 @@
     "@tanstack/react-query": "^5.66.0",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "axios": "^1.7.9",
-    "expo": "^52.0.21",
-    "expo-blur": "~14.0.1",
-    "expo-linear-gradient": "~14.0.1",
+    "expo": "~52.0.36",
+    "expo-blur": "~14.0.3",
+    "expo-linear-gradient": "~14.0.2",
     "expo-secure-store": "~14.0.1",
-    "expo-status-bar": "~2.0.0",
+    "expo-status-bar": "~2.0.1",
     "lottie-react-native": "^7.1.0",
     "nativewind": "^4.1.23",
     "react": "^18.3.1",
-    "react-native": "^0.76.5",
+    "react-native": "0.76.7",
+    "react-native-floating-label-input": "^1.4.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-heroicons": "^4.0.0",
     "react-native-maps": "1.18.0",
     "react-native-onboarding-swiper": "^1.3.0",
-    "react-native-reanimated": "^3.16.6",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-stepper-ui": "^0.0.9",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
